@@ -1,32 +1,36 @@
-package com.eventeasyv1.config;
+package com.eventeasyv1.config; // Assurez-vous que c'est le bon package
 
+import com.eventeasyv1.config.SecurityConfig; // Assurez-vous que le chemin est correct
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.http.HttpMethod; // Importer HttpMethod
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
+import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity; // Préféré à EnableGlobalMethodSecurity
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
+import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer; // Pour disable() moderne
 import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
+import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
-import org.springframework.web.filter.CorsFilter;
 
 import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 @EnableWebSecurity
+@EnableMethodSecurity // Active la sécurité au niveau des méthodes si nécessaire (@PreAuthorize, etc.)
 public class SecurityConfig {
 
+    // Field injection is acceptable here for Filters, but constructor injection is also fine
     @Autowired
     private JwtFilter jwtFilter;
-
-    @Autowired
-    private UserDetailsServiceImpl userDetailsService;
 
     @Bean
     public PasswordEncoder passwordEncoder() {
@@ -41,37 +45,78 @@ public class SecurityConfig {
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
         http
-                .csrf(csrf -> csrf.disable()) // Désactiver CSRF pour les API stateless
-                .cors(cors -> cors.configurationSource(corsConfigurationSource())) // Activer CORS
+                // Configuration CORS en premier (bonne pratique)
+                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+
+                // Désactiver CSRF pour les API stateless (commun avec JWT)
+                .csrf(AbstractHttpConfigurer::disable)
+
+                // Configuration des autorisations de requêtes HTTP
                 .authorizeHttpRequests(auth -> auth
-                        .requestMatchers("/api/auth/**").permitAll() // Autoriser l'accès aux endpoints d'authentification
-                        .requestMatchers("/swagger-ui/**", "/v3/api-docs/**").permitAll() // Autoriser Swagger si utilisé
-                        // TODO: Configurer les autorisations pour les autres rôles ici
-                        .requestMatchers("/api/clients/**").authenticated() // Exiger l'authentification pour les API client
-                        // .requestMatchers("/api/prestataires/**").hasAuthority("PRESTATAIRE") // Exemple autorisation par rôle
-                        // .requestMatchers("/api/admin/**").hasAuthority("ADMIN") // Exemple
-                        .anyRequest().authenticated() // Toutes les autres requêtes nécessitent une authentification
+                        // ---- Public Endpoints ----
+                        // Permettre l'accès public explicite aux endpoints d'authentification/inscription
+                        .requestMatchers("/api/auth/login").permitAll()
+                        .requestMatchers("/api/auth/register/client").permitAll()
+                        .requestMatchers("/api/auth/register/prestataire").permitAll() // <-- CORRECTION : Explicitement autorisé
+
+                        // Permettre la consultation publique des offres/événements (si nécessaire)
+                        .requestMatchers(HttpMethod.GET, "/api/offers").permitAll() // Exemple
+                        .requestMatchers(HttpMethod.GET, "/api/events").permitAll()  // Exemple
+
+                        // Permettre Swagger si utilisé
+                        .requestMatchers("/swagger-ui/**", "/v3/api-docs/**").permitAll()
+
+                        // ---- Protected Endpoints ----
+                        // Note: hasRole ajoute automatiquement "ROLE_" devant.
+                        // Si vos rôles sont stockés sans "ROLE_", utilisez hasAuthority("CLIENT").
+                        .requestMatchers("/api/clients/me").hasRole("CLIENT")
+                        .requestMatchers("/api/prestataires/me/**").hasRole("PRESTATAIRE")
+                        .requestMatchers("/api/statistiques/admin").hasRole("ADMIN")
+                        .requestMatchers("/api/admin/**").hasRole("ADMIN")
+
+                        // --- Ajoutez d'autres règles spécifiques ici ---
+                        // Ex: .requestMatchers(HttpMethod.POST, "/api/reservations").hasAnyRole("CLIENT", "ADMIN")
+
+                        // --- Fallback ---
+                        .anyRequest().authenticated() // Toute autre requête nécessite une authentification
                 )
+
+                // Configuration de la gestion de session (Stateless pour JWT)
                 .sessionManagement(session -> session
-                        .sessionCreationPolicy(SessionCreationPolicy.STATELESS) // Utiliser des sessions stateless (JWT)
+                        .sessionCreationPolicy(SessionCreationPolicy.STATELESS)
                 )
-                .addFilterBefore(jwtFilter, UsernamePasswordAuthenticationFilter.class); // Ajouter notre filtre JWT
+
+                // Ajout du filtre JWT avant le filtre d'authentification standard
+                .addFilterBefore(jwtFilter, UsernamePasswordAuthenticationFilter.class);
 
         return http.build();
     }
 
-    // Configuration CORS (Très important pour le développement frontend)
+    // --- Bean pour la Configuration CORS ---
     @Bean
-    public UrlBasedCorsConfigurationSource corsConfigurationSource() {
+    public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        // Remplacez "*" par l'URL de votre frontend en production
-        configuration.setAllowedOrigins(Arrays.asList("http://localhost:5173", "http://127.0.0.1:5173")); // Autoriser l'origine de Vite dev server
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
-        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Cache-Control", "Content-Type", "X-Requested-With", "Accept", "Origin"));
-        configuration.setAllowCredentials(true); // Important pour les cookies/auth headers
-        configuration.setMaxAge(3600L); // Durée de pré-vérification (preflight)
+
+        // ! IMPORTANT: Vérifiez le port de votre serveur de développement Vite !
+        configuration.setAllowedOrigins(List.of(
+                "http://localhost:5173", // Port Vite commun
+                "http://127.0.0.1:5173", // Autre adresse locale
+                "http://localhost:3000", // Port vu dans le screenshot de l'erreur
+                "http://127.0.0.1:3000"
+        ));
+        // Pour la production, remplacez par l'URL de votre frontend déployé:
+        // configuration.setAllowedOrigins(List.of("https://eventeasy.votre-domaine.com"));
+
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH", "HEAD")); // Méthodes autorisées
+        configuration.setAllowedHeaders(List.of("*")); // Autorise tous les en-têtes en DEV. Soyez plus spécifique en PROD.
+        // En-têtes spécifiques recommandés pour PROD :
+        // configuration.setAllowedHeaders(List.of("Authorization", "Cache-Control", "Content-Type", "X-Requested-With", "Accept", "Origin"));
+        configuration.setAllowCredentials(true); // Crucial pour les tokens/cookies
+        configuration.setMaxAge(3600L); // Cache preflight pendant 1 heure
+
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", configuration); // Appliquer cette config à toutes les routes
+        // Appliquer cette configuration CORS à toutes les routes sous /api/
+        source.registerCorsConfiguration("/api/**", configuration);
         return source;
     }
 }
